--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
     <header class="page-header">
 
       <nav class="main-nav">
-        <h1 class="main-nav__headline">Pink</h1>
+        <p class="main-nav__headline">Pink</p>
         <button class="main-nav__toggle main-nav--open" type="button">Открыть меню</button>
         <button class="main-nav__toggle main-nav--close" type="button">Закрыть меню</button>
           <ul class="main-nav__list site-list">
