--- a/source/form.html
+++ b/source/form.html
@@ -3,60 +3,71 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div class="site-wrapper">
+      <div class="container">
+        <header class="page-header">
 
-    <header class="page-header">
+          <nav class="main-nav">
+            <img class="main-nav__headline" src="../img/logo-pink-white-mobile" alt="Пинк">
+            <button class="main-nav__toggle main-nav--open visually-hidden" type="button">Открыть меню</button>
+            <button class="main-nav__toggle main-nav--close visually-hidden" type="button">Закрыть меню</button>
+              <ul class="main-nav__list site-list">
+                <li class="site-list__item site-list__item--active">
+                  <a class="site-list__link">Главная</a>
+                </li>
+                <li class="site-list__item">
+                  <a class="site-list__link" href="photo.html">Фотографии</a>
+                </li>
+                <li class="site-list__item">
+                  <a class="site-list__link" href="form.html">Конкурс</a>
+                </li>
+                <li class="site-list__item">
+                  <a class="site-list__link" href="www.htmlacademy.ru">HTML Academy</a>
+                </li>
+              </ul>
+          </nav>
+        </header>
 
-      <nav class="main-nav">
-        <p class="main-nav__headline">Pink</p>
-        <button class="main-nav__toggle main-nav--open" type="button">Открыть меню</button>
-        <button class="main-nav__toggle main-nav--close" type="button">Закрыть меню</button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a>Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a href="photo.html">Фотографии</a>
-            </li>
-            <li class="site-list__item">
-              <a href="form.html">Конкурс</a>
-            </li>
-            <li class="site-list__item">
-              <a href="#">HTML Academy</a>
-            </li>
-          </ul>
-      </nav>
-    </header>
+        <main class="page-form">
+          <div class="page-form__background">
+            <h1 class="page-form__competition">Конкурс на самое безбашенное путешествие с Пинк</h1>
+          </div>
+        </main>
 
-    <main class="page-form">
-      <h1 class="page-form__competition">Конкурс на самое безбашенное путешествие с Пинк</h1>
-
-    </main>
-
-    <footer class="page-footer">
-      <div class="page-footer__logo">
-        <img class="page-footer__img-logo" src="http://placehold.it/70x30" width="70" height="30" alt="Лого Пинк">
+        <footer class="page-footer">
+          <div class="page-footer__logo">
+            <include class="page-footer__img-logo" src="../img/logo-pink-blue-mobile.svg" width="150" height="40" alt="Лого Пинк"></include>
+          </div>
+          <div class="page-footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--twitter" href="#" aria-label="Мы в твиттере">
+                  <include class="social__icon-twitter icon" src="../img/icon-twitter.svg"></include>
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--facebook" href="#" aria-label="Мы в Фейсбуке">
+                  <include class="social__icon-facebook icon" src="../img/icon-facebook.svg"></include>
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--youtube" href="#" aria-label="Мы в youtube">
+                  <include class="social__icon-youtube icon" src="../img/icon-youtube.svg"></include>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="page-footer__copyright copyright">
+            <b class="copyright__text">Разработано:</b>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+              <include class="copyright__img" src="../img/logo-htmlacademy.svg" width="35" height="35" alt="logo htmlacademy"></include>
+            </a>
+          </div>
+        </footer>
       </div>
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="#">Мы в твиттере</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="#">Мы в youtube</a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <b class="copyright__text">Разработано:</b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__img" src="http://placehold.it/150x100" width="150" height="100" alt="logo htmlacademy">
-        </a>
-      </div>
-    </footer>
+    </div>
   </body>
 </html>
