--- a/source/photo.html
+++ b/source/photo.html
@@ -3,129 +3,154 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div class="site-wrapper">
+      <div class="container">
+        <header class="page-header">
+          <nav class="main-nav">
+            <include class="main-nav__headline" src="../img/logo-pink-white-mobile.svg" alt="Пинк"></include>
+            <button class="main-nav__toggle main-nav--open visually-hidden" type="button">Открыть меню</button>
+            <button class="main-nav__toggle main-nav--close visually-hidden" type="button">Закрыть меню</button>
+              <ul class="main-nav__list site-list">
+                <li class="site-list__item site-list__item--active">
+                  <a class="site-list__link">Главная</a>
+                </li>
+                <li class="site-list__item">
+                  <a class="site-list__link" href="photo.html">Фотографии</a>
+                </li>
+                <li class="site-list__item">
+                  <a class="site-list__link" href="form.html">Конкурс</a>
+                </li>
+                <li class="site-list__item">
+                  <a class="site-list__link" href="www.htmlacademy.ru">HTML Academy</a>
+                </li>
+              </ul>
+          </nav>
+        </header>
 
-    <header class="page-header">
+        <main class="page-photo">
+          <div class="page-photo__background">
+            <h1 class="page-photo__photo-users">Фотографии пользователей</h1>
+          </div>
+          <p class="page-photo__description">Взгляните на фотографии, которыевыкладывают пользователи! Видите, как не хватает ваших?</p>
+          <section class="photo-post">
+            <h2 class="visually-hidden">Посты пользователей</h2>
+            <ul class="photo-post__list">
+              <li class="photo-post__item">
+                <article>
+                  <img class="photo-post__img" src="img/panorama-mobile@1x.jpg" width="320" height="136" alt="Фото пользователя">
+                  <div class="photo-post__info">
+                    <p class="photo-post__user">Анна</p>
+                    <p class="photo-post__time">(5 минут назад)</p>
+                    <p class="photo-post__description">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+                    <p class="photo-post__like">Нравится: 215</p>
+                  </div>
+                </article>
+              </li>
+              <li class="photo-post__item">
+                <article>
+                  <img class="photo-post__img" src="img/photo-car-mobile@1x.jpg" width="280" height="136" alt="Фото пользователя">
+                  <div class="photo-post__info">
+                    <p class="photo-post__user">Левон</p>
+                    <p class="photo-post__time">(5 часов назад)</p>
+                    <p class="photo-post__description">Вчера он на луну летал, сегодня в руки к нам попал.</p>
+                    <p class="photo-post__like">Нравится: 356</p>
+                  </div>
+                </article>
+              </li>
+              <li class="photo-post__item">
+                <article>
+                  <img class="photo-post__img" src="img/photo-drumset-mobile@1x.jpg" width="280" height="136" alt="Фото пользователя">
+                  <div class="photo-post__info">
+                    <p class="photo-post__user">Антон</p>
+                    <p class="photo-post__time">(12 часов назад)</p>
+                    <p class="photo-post__description">Соседи будут рады!</p>
+                    <p class="photo-post__like">Нравится: 666</p>
+                  </div>
+                </article>
+              </li>
+              <li class="photo-post__item">
+                <article>
+                  <img class="photo-post__img" src="img/photo-window-mobile@1x.jpg" width="280" height="136" alt="Фото пользователя">
+                  <div class="photo-post__info">
+                    <p class="photo-post__user">Борис</p>
+                    <p class="photo-post__time">(20 часов назад)</p>
+                    <p class="photo-post__description">Здесь могла быть ваша цитата о высоком и вечном.</p>
+                    <p class="photo-post__like">Нравится: 215</p>
+                  </div>
+                </article>
+              </li>
+              <li class="photo-post__item">
+                <article>
+                  <img class="photo-post__img" src="img/photo-fair-mobile@1x.jpg" width="280" height="136" alt="Фото пользователя">
+                  <div class="photo-post__info">
+                    <p class="photo-post__user">Сергей</p>
+                    <p class="photo-post__time">(25 часов назад)</p>
+                    <p class="photo-post__description">Самая кубанская в мире!</p>
+                    <p class="photo-post__like">Нравится: 4</p>
+                  </div>
+                </article>
+              </li>
+              <li class="photo-post__item">
+                <article>
+                  <img class="photo-post__img" src="img/photo-pov-mobile@1x.jpg" width="280" height="136" alt="Фото пользователя">
+                  <div class="photo-post__info">
+                    <p class="photo-post__user">Максим</p>
+                    <p class="photo-post__time">(40 часов назад)</p>
+                    <p class="photo-post__description">Где снег-то?</p>
+                    <p class="photo-post__like">Нравится: 150</p>
+                  </div>
+                </article>
+              </li>
+              <li class="photo-post__item">
+                <article>
+                  <img class="photo-post__img" src="img/photo-wing-mobile@1x.jpg" width="280" height="136" alt="Фото пользователя">
+                  <div class="photo-post__info">
+                    <p class="photo-post__user">Надежда</p>
+                    <p class="photo-post__time">(45 часов назад)</p>
+                    <p class="photo-post__description">Всем GM и взаимные лайки!</p>
+                    <p class="photo-post__like">Нравится: 2560</p>
+                  </div>
+                </article>
+              </li>
+            </ul>
+          </section>
 
-      <nav class="main-nav">
-        <p class="main-nav__headline">Pink</p>
-        <button class="main-nav__toggle main-nav--open" type="button">Открыть меню</button>
-        <button class="main-nav__toggle main-nav--close" type="button">Закрыть меню</button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a>Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a href="photo.html">Фотографии</a>
-            </li>
-            <li class="site-list__item">
-              <a href="form.html">Конкурс</a>
-            </li>
-            <li class="site-list__item">
-              <a href="#">HTML Academy</a>
-            </li>
-          </ul>
-      </nav>
-    </header>
+        </main>
 
-    <main class="page-photo">
-      <h1 class="page-photo__photo-users">Фотографии пользователей</h1>
-      <p class="page-photo__description">Взгляните на фотографии, которыевыкладывают пользователи! Видите, как не хватает ваших?</p>
-      <section class="photo-post">
-        <h2 class="visually-hidden">Посты пользователей</h2>
-        <ul class="photo-post__list">
-          <li class="photo-post__item">
-            <article>
-              <img class="photo-post__img" src="http://placehold.it/150x100" width="150" height="100" alt="Фото пользователя">
-              <p class="photo-post__user">Анна</cite>
-              <p class="photo-post__time">(5 минут назад)</p>
-              <p class="photo-post__description">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-              <p class="photo-post__like">Нравится: 215</p>
-            </article>
-          </li>
-          <li class="photo-post__item">
-            <article>
-              <img class="photo-post__img" src="http://placehold.it/150x100" width="150" height="100" alt="Фото пользователя">
-              <p class="photo-post__user">Левон</cite>
-              <p class="photo-post__time">(5 часов назад)</p>
-              <p class="photo-post__description">Вчера он на луну летал, сегодня в руки к нам попал.</p>
-              <p class="photo-post__like">Нравится: 356</p>
-            </article>
-          </li>
-          <li class="photo-post__item">
-            <article>
-              <img class="photo-post__img" src="http://placehold.it/150x100" width="150" height="100" alt="Фото пользователя">
-              <p class="photo-post__user">Антон</cite>
-              <p class="photo-post__time">(12 часов назад)</p>
-              <p class="photo-post__description">Соседи будут рады!</p>
-              <p class="photo-post__like">Нравится: 666</p>
-            </article>
-          </li>
-          <li class="photo-post__item">
-            <article>
-              <img class="photo-post__img" src="http://placehold.it/150x100" width="150" height="100" alt="Фото пользователя">
-              <p class="photo-post__user">Борис</cite>
-              <p class="photo-post__time">(20 часов назад)</p>
-              <p class="photo-post__description">Здесь могла быть ваша цитата о высоком и вечном.</p>
-              <p class="photo-post__like">Нравится: 215</p>
-            </article>
-          </li>
-          <li class="photo-post__item">
-            <article>
-              <img class="photo-post__img" src="http://placehold.it/150x100" width="150" height="100" alt="Фото пользователя">
-              <p class="photo-post__user">Сергей</cite>
-              <p class="photo-post__time">(25 часов назад)</p>
-              <p class="photo-post__description">Самая кубанская в мире!</p>
-              <p class="photo-post__like">Нравится: 4</p>
-            </article>
-          </li>
-          <li class="photo-post__item">
-            <article>
-              <img class="photo-post__img" src="http://placehold.it/150x100" width="150" height="100" alt="Фото пользователя">
-              <p class="photo-post__user">Максим</cite>
-              <p class="photo-post__time">(40 часов назад)</p>
-              <p class="photo-post__description">Где снег-то?</p>
-              <p class="photo-post__like">Нравится: 150</p>
-            </article>
-          </li>
-          <li class="photo-post__item">
-            <article>
-              <img class="photo-post__img" src="http://placehold.it/150x100" width="150" height="100" alt="Фото пользователя">
-              <p class="photo-post__user">Надежда</cite>
-              <p class="photo-post__time">(45 часов назад)</p>
-              <p class="photo-post__description">Всем GM и взаимные лайки!</p>
-              <p class="photo-post__like">Нравится: 2560</p>
-            </article>
-          </li>
-        </ul>
-      </section>
-
-    </main>
-
-    <footer class="page-footer">
-      <div class="page-footer__logo">
-        <img class="page-footer__img-logo" src="http://placehold.it/70x30" width="70" height="30" alt="Лого Пинк">
+        <footer class="page-footer">
+          <div class="page-footer__logo">
+            <include class="page-footer__img-logo" src="../img/logo-pink-blue-mobile.svg" width="150" height="40" alt="Лого Пинк"></include>
+          </div>
+          <div class="page-footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--twitter" href="#" aria-label="Мы в твиттере">
+                  <include class="social__icon-twitter icon" src="../img/icon-twitter.svg"></include>
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--facebook" href="#" aria-label="Мы в Фейсбуке">
+                  <include class="social__icon-facebook icon" src="../img/icon-facebook.svg"></include>
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--youtube" href="#" aria-label="Мы в youtube">
+                  <include class="social__icon-youtube icon" src="../img/icon-youtube.svg"></include>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="page-footer__copyright copyright">
+            <b class="copyright__text">Разработано:</b>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+              <include class="copyright__img" src="../img/logo-htmlacademy.svg" width="35" height="35" alt="logo htmlacademy"></include>
+            </a>
+          </div>
+        </footer>
       </div>
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="#">Мы в твиттере</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="#">Мы в youtube</a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <b class="copyright__text">Разработано:</b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__img" src="http://placehold.it/150x100" width="150" height="100" alt="logo htmlacademy">
-        </a>
-      </div>
-    </footer>
+    </div>
   </body>
 </html>
