Верстка макетов. Задание 5

--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div class="site-wrapper">
-        <header class="page-header">
+      <div class="page-header">
+        <div class="main-nav__wrapper-desktop-form">
           <nav class="main-nav main-nav--closed main-nav--nojs">
             <div class="main-nav__wrapper">
               <div class="main-nav__logo">
@@ -39,7 +40,8 @@
               </ul>
             </div>
           </nav>
-        </header>
+        </div>
+      </header>
 
         <main class="page-form">
           <div class="page-form__background">
