--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,8 @@
   <body>
     <div class="site-wrapper">
         <header class="page-header">
-          <nav class="main-nav main-nav--closed main-nav--nojs">
+          <div class="main-nav__wrapper-desktop">
+            <nav class="main-nav main-nav--closed main-nav--nojs">
             <div class="main-nav__wrapper">
               <div class="main-nav__logo">
                 <svg width="75" height="22" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
@@ -23,22 +24,23 @@
                 </svg>
                 <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
               </div>
-              <ul class="main-nav__list site-list">
-                <li class="site-list__item site-list__item--active">
-                  <a class="site-list__link">Главная</a>
-                </li>
-                <li class="site-list__item">
-                  <a class="site-list__link" href="photo.html">Фотографии</a>
-                </li>
-                <li class="site-list__item">
-                  <a class="site-list__link" href="form.html">Конкурс</a>
-                </li>
-                <li class="site-list__item">
-                  <a class="site-list__link" href="www.htmlacademy.ru">HTML Academy</a>
-                </li>
-              </ul>
+                <ul class="main-nav__list site-list">
+                  <li class="site-list__item site-list__item--active">
+                    <a class="site-list__link">Главная</a>
+                  </li>
+                  <li class="site-list__item">
+                    <a class="site-list__link" href="photo.html">Фотографии</a>
+                  </li>
+                  <li class="site-list__item">
+                    <a class="site-list__link" href="form.html">Конкурс</a>
+                  </li>
+                  <li class="site-list__item">
+                    <a class="site-list__link" href="www.htmlacademy.ru">HTML Academy</a>
+                  </li>
+                </ul>
             </div>
-          </nav>
+            </nav>
+          </div>
         </header>
 
         <main class="page-main">
@@ -117,17 +119,17 @@
                       <div class="advantages__wrapper-main-desktop">
                         <ul class="advantages__list-desktop">
                         <li class="advantages__item-desktop">
-                          <img class="advantages__img-desktop" src="img/iphone-screen-1-desktop@1x.png" width="186" height="382">
+                          <img class="advantages__img-desktop" src="img/iphone-screen-1-desktop@1x.png" width="292" height="302">
                           <p class="advantages__title-desktop">Поднимает настроение</p>
                           <p class="advantages__description-desktop">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
                         </li>
                         <li class="advantages__item-desktop">
-                          <img class="advantages__img-desktop" src="img/iphone-screen-2-desktop@1x.png" width="186" height="382">
+                          <img class="advantages__img-desktop" src="img/iphone-screen-2-desktop@1x.png" width="292" height="302">
                           <p class="advantages__title-desktop">Меняет мир вокруг</p>
                           <p class="advantages__description-desktop">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
                         </li>
                         <li class="advantages__item-desktop">
-                          <img class="advantages__img-desktop" src="img/iphone-screen-3-desktop@1x.png" width="186" height="382">
+                          <img class="advantages__img-desktop" src="img/iphone-screen-3-desktop@1x.png" width="292" height="302">
                           <p class="advantages__title-desktop">Заводит новых друзей</p>
                           <p class="advantages__description-desktop">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
                         </li>
