--- a/source/photo.html
+++ b/source/photo.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div class="site-wrapper">
-        <header class="page-header">
+      <div class="page-header">
+        <div class="main-nav__wrapper-desktop-photo">
           <nav class="main-nav main-nav--closed main-nav--nojs">
             <div class="main-nav__wrapper">
               <div class="main-nav__logo">
@@ -39,7 +40,8 @@
               </ul>
             </div>
           </nav>
-        </header>
+        </div>
+      </header>
 
         <main class="page-photo">
           <div class="page-photo__background">
@@ -59,7 +61,7 @@
                   <img class="photo-post__img photo-post__img--panorama" src="img/panorama-mobile@1x.jpg" width="320" height="136" alt="Фото пользователя">
                   <div class="photo-post__info">
                     <p class="photo-post__user">Анна&nbsp;<span class="photo-post__time">(5 минут назад)</span></p>
-                    <p class="photo-post__description">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+                    <p class="photo-post__description">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
                     <p class="photo-post__like">Нравится: 215</p>
                   </div>
                 </article>
