--- a/source/photo.html
+++ b/source/photo.html
@@ -14,14 +14,11 @@
           <nav class="main-nav main-nav--closed main-nav--nojs">
             <div class="main-nav__wrapper">
               <div class="main-nav__logo">
-                <svg width="75" height="22" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
-                  <g>
-                    <path fill="#FFFFFF" d="M0,1.449c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.147v0.064 c0,4.861-4.057,7.373-8.854,7.373H2.544v6.825c0,0.708-0.58,1.288-1.288,1.288C0.58,22.859,0,22.279,0,21.571V1.449z M8.114,12.428 c3.734,0,6.182-1.996,6.182-4.958V7.405c0-3.22-2.415-4.894-6.054-4.894H2.544v9.917H8.114z"/>
-                    <path fill="#FFFFFF" d="M21.729,1.288C21.729,0.58,22.308,0,22.983,0c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.288-1.288,1.288c-0.676,0-1.255-0.58-1.255-1.288V1.288z"/>
-                    <path fill="#FFFFFF" d="M30.87,1.32c0-0.676,0.579-1.256,1.256-1.256h0.354c0.58,0,0.934,0.29,1.288,0.74l13.684,17.45V1.256 C47.451,0.58,47.998,0,48.707,0c0.676,0,1.223,0.58,1.223,1.256v20.348c0,0.676-0.482,1.191-1.158,1.191h-0.129 c-0.548,0-0.934-0.322-1.32-0.772L33.349,4.153v17.45c0,0.676-0.547,1.256-1.255,1.256c-0.677,0-1.224-0.58-1.224-1.256V1.32z"/>
-                    <path fill="#FFFFFF" d="M56.3,1.288C56.3,0.58,56.879,0,57.556,0c0.708,0,1.287,0.58,1.287,1.288v12.331L71.689,0.451 C71.979,0.193,72.269,0,72.688,0c0.676,0,1.224,0.612,1.224,1.256c0,0.354-0.161,0.644-0.419,0.901l-7.984,7.92l8.564,10.561 c0.225,0.29,0.354,0.547,0.354,0.934c0,0.676-0.579,1.288-1.287,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.403-10.463l-4.862,4.861 v4.894c0,0.708-0.579,1.288-1.287,1.288c-0.677,0-1.256-0.58-1.256-1.288V1.288z"/>
-                  </g>
-                </svg>
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
+                  <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
+                  <img src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Пинк">
+                </picture>
                 <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
               </div>
               <ul class="main-nav__list site-list">
@@ -58,7 +55,11 @@
               <ul class="photo-post__list">
               <li class="photo-post__item">
                 <article>
-                  <img class="photo-post__img photo-post__img--panorama" src="img/panorama-mobile@1x.jpg" width="320" height="136" alt="Фото пользователя">
+                    <picture>
+                      <source media="(min-width: 1200px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
+                      <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x">
+                      <img class="photo-post__img photo-post__img--panorama" src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg 2x" alt="Фото пользователя">
+                    </picture>
                   <div class="photo-post__info">
                     <p class="photo-post__user">Анна&nbsp;<span class="photo-post__time">(5 минут назад)</span></p>
                     <p class="photo-post__description">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
@@ -68,7 +69,11 @@
               </li>
               <li class="photo-post__item">
                 <article>
-                  <img class="photo-post__img" src="img/photo-car-mobile@1x.jpg" width="280" height="136" alt="Фото пользователя">
+                    <picture>
+                      <source media="(min-width: 1200px)" srcset="img/photo-car-desktop@1x.jpg 1x, img/photo-car-desktop@2x.jpg 2x">
+                      <source media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.jpg 1x, img/photo-car-tablet@2x.jpg 2x">
+                      <img class="photo-post__img" src="img/photo-car-mobile@1x.jpg" srcset="img/photo-car-mobile@2x.jpg 2x" alt="Фото пользователя">
+                    </picture>
                   <div class="photo-post__info">
                     <p class="photo-post__user">Левон&nbsp;<span class="photo-post__time">(5 часов назад)</span></p>
                     <p class="photo-post__description">Вчера он на луну летал, сегодня в руки к нам попал.</p>
@@ -78,7 +83,11 @@
               </li>
               <li class="photo-post__item">
                 <article>
-                  <img class="photo-post__img" src="img/photo-drumset-mobile@1x.jpg" width="280" height="136" alt="Фото пользователя">
+                    <picture>
+                      <source media="(min-width: 1200px)" srcset="img/photo-drumset-desktop@1x.jpg 1x, img/photo-drumset-desktop@2x.jpg 2x">
+                      <source media="(min-width: 660px)" srcset="img/photo-drumset-tablet@1x.jpg 1x, img/photo-drumset-tablet@2x.jpg 2x">
+                      <img class="photo-post__img" src="img/photo-drumset-mobile@1x.jpg" srcset="img/photo-drumset-mobile@2x.jpg 2x" alt="Фото пользователя">
+                    </picture>
                   <div class="photo-post__info">
                     <p class="photo-post__user">Антон&nbsp;<span class="photo-post__time">(12 часов назад)</span></p>
                     <p class="photo-post__description">Соседи будут рады!</p>
@@ -88,7 +97,11 @@
               </li>
               <li class="photo-post__item">
                 <article>
-                  <img class="photo-post__img" src="img/photo-window-mobile@1x.jpg" width="280" height="136" alt="Фото пользователя">
+                    <picture>
+                      <source media="(min-width: 1200px)" srcset="img/photo-window-desktop@1x.jpg 1x, img/photo-window-desktop@2x.jpg 2x">
+                      <source media="(min-width: 660px)" srcset="img/photo-window-tablet@1x.jpg 1x, img/photo-window-tablet@2x.jpg 2x">
+                      <img class="photo-post__img" src="img/photo-window-mobile@1x.jpg" srcset="img/photo-window-mobile@2x.jpg 2x" alt="Фото пользователя">
+                    </picture>
                   <div class="photo-post__info">
                     <p class="photo-post__user">Борис&nbsp;<span class="photo-post__time">(20 часов назад)</span></p>
                     <p class="photo-post__description">Здесь могла быть ваша цитата о высоком и вечном.</p>
@@ -98,7 +111,11 @@
               </li>
               <li class="photo-post__item">
                 <article>
-                  <img class="photo-post__img" src="img/photo-fair-mobile@1x.jpg" width="280" height="136" alt="Фото пользователя">
+                    <picture>
+                      <source media="(min-width: 1200px)" srcset="img/photo-fair-desktop@1x.jpg 1x, img/photo-fair-desktop@2x.jpg 2x">
+                      <source media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.jpg 1x, img/photo-fair-tablet@2x.jpg 2x">
+                      <img class="photo-post__img" src="img/photo-fair-mobile@1x.jpg" srcset="img/photo-fair-mobile@2x.jpg 2x" alt="Фото пользователя">
+                    </picture>
                   <div class="photo-post__info">
                     <p class="photo-post__user">Сергей&nbsp;<span class="photo-post__time">(25 часов назад)</span></p>
                     <p class="photo-post__description">Самая кубанская в мире!</p>
@@ -108,7 +125,11 @@
               </li>
               <li class="photo-post__item">
                 <article>
-                  <img class="photo-post__img" src="img/photo-pov-mobile@1x.jpg" width="280" height="136" alt="Фото пользователя">
+                    <picture>
+                      <source media="(min-width: 1200px)" srcset="img/photo-pov-desktop@1x.jpg 1x, img/photo-pov-desktop@2x.jpg 2x">
+                      <source media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.jpg 1x, img/photo-pov-tablet@2x.jpg 2x">
+                      <img class="photo-post__img" src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2x.jpg 2x" alt="Фото пользователя">
+                    </picture>
                   <div class="photo-post__info">
                     <p class="photo-post__user">Максим&nbsp;<span class="photo-post__time">(40 часов назад)</span></p>
                     <p class="photo-post__description">Где снег-то?</p>
@@ -118,7 +139,11 @@
               </li>
               <li class="photo-post__item">
                 <article>
-                  <img class="photo-post__img" src="img/photo-wing-mobile@1x.jpg" width="280" height="136" alt="Фото пользователя">
+                    <picture>
+                      <source media="(min-width: 1200px)" srcset="img/photo-wing-desktop@1x.jpg 1x, img/photo-wing-desktop@2x.jpg 2x">
+                      <source media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.jpg 1x, img/photo-wing-tablet@2x.jpg 2x">
+                      <img class="photo-post__img" src="img/photo-wing-mobile@1x.jpg" srcset="img/photo-wing-mobile@2x.jpg 2x" alt="Фото пользователя">
+                    </picture>
                   <div class="photo-post__info">
                     <p class="photo-post__user">Надежда&nbsp;<span class="photo-post__time">(45 часов назад)</span></p>
                     <p class="photo-post__description">Всем GM и взаимные лайки!</p>
