--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Пинк</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link href="css/style.min.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="site-wrapper">
@@ -13,10 +13,12 @@
         <div class="main-nav__wrapper-desktop-form">
           <nav class="main-nav main-nav--closed main-nav--nojs">
             <div class="main-nav__wrapper">
-              <div class="main-nav__logo">
-                <svg class="main-nav__logo-general" width="145px" height="23px">
-                  <use xlink:href="img/sprite.svg#logo-main"></use>
-                </svg>
+              <div class="main-nav__logo-wrapper">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
+                  <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
+                  <img class="main-nav__logo" src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Пинк">
+                </picture>
                 <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
               </div>
               <ul class="main-nav__list site-list">
@@ -47,47 +49,49 @@
         </main>
 
         <footer class="page-footer-index">
-          <div class="page-footer-index__wrapper">
-            <div class="page-footer__logo">
-                <svg class="page-footer__logo-icon" width="147" height="40">
-                  <use xlink:href="img/sprite.svg#logo-footer"></use>
-                </svg>
+            <div class="page-footer-index__wrapper">
+              <div class="page-footer__logo-wrapper">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/logo-pink-blue-desktop.svg">
+                  <source media="(min-width: 660px)" srcset="img/logo-pink-blue-mobile.svg">
+                  <img class="main-nav__logo" src="img/logo-pink-blue-mobile.svg" width="75" height="22" alt="Пинк">
+                </picture>
+              </div>
+              <div class="page-footer__social social">
+                <ul class="social__list">
+                  <li class="social__item">
+                    <a class="social__link" href="#" aria-label="Мы в твиттере">
+                      <svg class="social__icon-twitter" width="18" height="18">
+                        <use xlink:href="img/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#" aria-label="Мы в Фейсбуке">
+                      <svg class="social__icon-facebook" width="18" height="18">
+                        <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#" aria-label="Мы в youtube">
+                      <svg class="social__icon-youtube" width="18" height="18">
+                        <use xlink:href="img/sprite.svg#icon-youtube"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="page-footer__copyright copyright">
+                <b class="copyright__text">Разработано</b>
+                <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+                  <svg width="27" height="34">
+                    <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
+                  </svg>
+                </a>
+              </div>
             </div>
-            <div class="page-footer__social social">
-              <ul class="social__list">
-                <li class="social__item">
-                  <a class="social__link" href="#" aria-label="Мы в твиттере">
-                    <svg class="social__icon-twitter" width="18" height="18">
-                      <use xlink:href="img/sprite.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social__item">
-                  <a class="social__link" href="#" aria-label="Мы в Фейсбуке">
-                    <svg class="social__icon-facebook" width="18" height="18">
-                      <use xlink:href="img/sprite.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social__item">
-                  <a class="social__link" href="#" aria-label="Мы в youtube">
-                    <svg class="social__icon-youtube" width="18" height="18">
-                      <use xlink:href="img/sprite.svg#icon-youtube"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <div class="page-footer__copyright copyright">
-              <b class="copyright__text">Разработано</b>
-              <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-                <svg width="27" height="34">
-                  <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
-                </svg>
-              </a>
-            </div>
-          </div>
-        </footer>
+          </footer>
     </div>
 
     <script>
