разметка и стилизация оставшихся блоков на всех страницах

--- a/source/index.html
+++ b/source/index.html
@@ -158,6 +158,140 @@
                     </div>
                   </div>
                 </section>
+                <section class="reviews">
+                  <h2 class="visually-hidden">Отзывы</h2>
+                  <div class="reviews__wrapper">
+                    <article class="reviews__users">
+                      <h3 class="reviews__users-name">Николай Петров</h3>
+                      <p class="reviews__users-description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                      <p class="reviews__users-job">25 лет, водитель трамвая</p>
+                    </article>
+                    <div class="reviews__control-mobile">
+                      <label for="reviews__one">Первый отзыв</label>
+                      <label for="reviews__two">Второй отзыв</label>
+                      <label for="reviews__three">Третий отзыв</label>
+                    </div>
+                  </div>
+                </section>
+                <section class="tariff">
+                  <h2 class="visually-hidden">Тарифы</h2>
+                  <div class="tariff__wrapper">
+                    <table class="tariff__pink-mobile">
+                      <tr class="tariff__name-stroke">
+                        <th colspan="2" class="tariff__name-tariff">
+                          <p class="tariff__name">Стандарт</p>
+                          <p class="tariff__coin">3,99 USD</p>
+                        </th>
+                      </tr>
+                      <tr class="tariff__option-stroke">
+                        <td class="tariff__option-name">Розовый фильтр</td>
+                        <td class="tariff__option">
+                          <svg class="tariff__option-chek-yes" width="27" height="27">
+                            <use xlink:href="img/sprite.svg#icon-yes"></use>
+                          </svg>
+                        </td>
+                      </tr>
+                      <tr class="tariff__option-stroke">
+                        <td class="tariff__option-name">Смайлики</td>
+                        <td class="tariff__option">
+                          <svg class="tariff__option-chek-yes" width="27" height="27">
+                            <use xlink:href="img/sprite.svg#icon-yes"></use>
+                          </svg>
+                        </td>
+                      </tr>
+                      <tr class="tariff__option-stroke">
+                        <td class="tariff__option-name">Комментарии</td>
+                        <td class="tariff__option">
+                          <svg class="tariff__option-chek-no" width="27" height="27">
+                            <use xlink:href="img/sprite.svg#icon-no"></use>
+                          </svg>
+                        </td>
+                      </tr>
+                    </table>
+                    <table class="tariff__pink-table">
+                      <tr class="tariff__name-stroke">
+                        <th></th>
+                        <th class="tariff__name-tariff">База<span>1,99 USD</span></th>
+                        <th class="tariff__name-tariff">Стандарт<span>3,99 USD</span></th>
+                        <th class="tariff__name-tariff">Анлим<span>9,99 USD</span></th>
+                      </tr>
+                      <tr class="tariff__option-stroke">
+                        <td class="tariff__option-name">Розовый фильтр</td>
+                        <td class="tariff__option">
+                          <svg class="tariff__option-chek-yes" width="27" height="27">
+                            <use xlink:href="img/sprite.svg#icon-yes"></use>
+                          </svg>
+                        </td>
+                        <td class="tariff__option">
+                          <svg class="tariff__option-chek-no" width="27" height="27">
+                            <use xlink:href="img/sprite.svg#icon-no"></use>
+                          </svg>
+                        </td>
+                        <td class="tariff__option">
+                          <svg class="tariff__option-chek-no" width="27" height="27">
+                            <use xlink:href="img/sprite.svg#icon-no"></use>
+                          </svg>
+                        </td>
+                      </tr>
+                      <tr class="tariff__option-stroke">
+                        <td class="tariff__option-name">Смайлики</td>
+                        <td class="tariff__option">
+                          <svg class="tariff__option-chek-yes" width="27" height="27">
+                            <use xlink:href="img/sprite.svg#icon-yes"></use>
+                          </svg>
+                        </td>
+                        <td class="tariff__option">
+                          <svg class="tariff__option-chek-yes" width="27" height="27">
+                            <use xlink:href="img/sprite.svg#icon-yes"></use>
+                          </svg>
+                        </td>
+                        <td class="tariff__option">
+                          <svg class="tariff__option-chek-no" width="27" height="27">
+                            <use xlink:href="img/sprite.svg#icon-no"></use>
+                          </svg>
+                        </td>
+                      </tr>
+                      <tr class="tariff__option-stroke">
+                        <td class="tariff__option-name">Комментарии</td>
+                        <td class="tariff__option">
+                          <svg class="tariff__option-chek-yes" width="27" height="27">
+                            <use xlink:href="img/sprite.svg#icon-yes"></use>
+                          </svg>
+                        </td>
+                        <td class="tariff__option">
+                          <svg class="tariff__option-chek-yes" width="27" height="27">
+                            <use xlink:href="img/sprite.svg#icon-yes"></use>
+                          </svg>
+                        </td>
+                        <td class="tariff__option">
+                          <svg class="tariff__option-chek-yes" width="27" height="27">
+                            <use xlink:href="img/sprite.svg#icon-yes"></use>
+                          </svg>
+                        </td>
+                      </tr>
+                    </table>
+                    <div class="tariff__control-mobile">
+                      <label for="tariff__one">Первый тариф</label>
+                      <label for="tariff__two">Второй тариф</label>
+                      <label for="tariff__three">Третий тариф</label>
+                    </div>
+                  </div>
+                </section>
+                <section class="contacts">
+                  <h2 class="visually-hidden">Контакты</h2>
+                  <div class="contacts__wrapper">
+                    <p class="contacts__questions">Остались вопросы? Свяжитесь с нами!</p>
+                    <p class="contacts__label">Звоните:</p>
+                    <p class="contacts__fact">+7 (812) 555-66-66</p>
+                    <p class="contacts__label">Пишите:</p>
+                    <p class="contacts__fact">mail@htmlacademy.ru</p>
+                    <p class="contacts__label">Приезжайте в гости:</p>
+                    <p class="contacts__fact">ул. Большая Конюшенная, 19/8</p>
+                  </div>
+                </section>
+                <section class="map">
+                  <h2 class="visually-hidden">Как до нас добраться</h2>
+                </section>
         </main>
 
         <footer class="page-footer-index">
