--- a/source/photo.html
+++ b/source/photo.html
@@ -182,6 +182,68 @@
             </ul>
             </div>
           </section>
+          <section class="photo-call">
+            <h2 class="visually-hidden">Призыв</h2>
+            <div class="photo-call__wrapper">
+              <p class="photo-call__description">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
+            </div>
+          </section>
+          <section class="photo-editor">
+            <h2 class="visually-hidden">Редактирование фото</h2>
+            <div class="photo-editor__wrapper">
+              <div class="photo-editor__post">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-road-desktop@1x.webp 1x, img/photo-road-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-road-tablet@1x.webp 1x, img/photo-road-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-road-mobile@1x.webp 1x, img/photo-road-mobile@2x.webp 2x">
+
+                  <source media="(min-width: 1200px)" srcset="img/photo-road-desktop@1x.jpg 1x, img/photo-road-desktop@2x.jpg 2x">
+                  <source media="(min-width: 660px)" srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x">
+                  <img class="photo-editor__img" src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x" alt="Фото для редактирования">
+                </picture>
+                <form class="photo-editor__post-tools" method="GET" action="https://echo.htmlacademy.ru">
+                  <legend class="visually-hidden">Обрезание</legend>
+                  <fieldset class="photo-editor__crop">
+                    <svg class="photo-editor__icon" width="48" height="48">
+                      <use xlink:href="img/sprite.svg#icon-editor-crop"></use>
+                    </svg>
+                    <div class="photo-editor__range-controls">
+                      <div class="photo-editor__scale">
+                        <div class="photo-editor__bar"></div>
+                      </div>
+                      <div class="photo-editor__toggle"></div>
+                    </div>
+                  </fieldset>
+                  <legend class="visually-hidden">Заливка</legend>
+                  <fieldset class="photo-editor__fill">
+                    <svg class="photo-editor__icon" width="48" height="48">
+                      <use xlink:href="img/sprite.svg#icon-editor-fill"></use>
+                    </svg>
+                    <div class="photo-editor__range-controls">
+                      <div class="photo-editor__scale">
+                        <div class="photo-editor__bar"></div>
+                      </div>
+                      <div class="photo-editor__toggle"></div>
+                    </div>
+                  </fieldset>
+                  <legend class="visually-hidden">Контрастность</legend>
+                  <fieldset class="photo-editor__contrast">
+                    <svg class="photo-editor__icon" width="32" height="32">
+                      <use xlink:href="img/sprite.svg#icon-editor-contrast"></use>
+                    </svg>
+                    <div class="photo-editor__range-controls">
+                      <div class="photo-editor__scale">
+                        <div class="photo-editor__bar"></div>
+                      </div>
+                      <div class="photo-editor__toggle"></div>
+                    </div>
+                  </fieldset>
+                  <button type="submit" class="photo-editor__button photo-editor__button-post">Запостить</button>
+                  <button type="submit" class="photo-editor__button photo-editor__button-cancel">Отмена</button>
+                </form>
+              </div>
+            </div>
+          </section>
         </main>
 
         <footer class="page-footer-index">
